ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Test__c/fields/Test_Description__c.field-meta.xml
<CustomField>
    <fullName>Test_Description__c</fullName>
    <label>Test Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>