ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Lab_Test__c/fields/Test_Reason__c.field-meta.xml
<CustomField>
    <fullName>Test_Reason__c</fullName>
    <label>Test Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Claim_Type_Reason</valueSetName>
    </valueSet>
</CustomField>